--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "@emotion/react": "11.10.4",
     "@emotion/styled": "11.10.4",
+    "@types/cheerio": "^0.22.31",
+    "cheerio": "^1.0.0-rc.12",
     "next": "^13.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
