--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
   "dependencies": {
     "@emotion/react": "11.10.4",
     "@emotion/styled": "11.10.4",
-    "@types/cheerio": "^0.22.31",
+    "chart.js": "^4.0.1",
     "cheerio": "^1.0.0-rc.12",
     "next": "^13.0.5",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
@@ -33,6 +34,9 @@
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
+    "@types/chart.js": "^2.9.37",
+    "@types/cheerio": "^0.22.31",
+    "@types/react-chartjs-2": "^2.5.7",
     "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
