--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "@emotion/react": "11.10.4",
     "@emotion/styled": "11.10.4",
+    "@tanstack/react-query": "^4.18.0",
+    "axios": "^1.2.0",
     "chart.js": "^4.0.1",
     "cheerio": "^1.0.0-rc.12",
     "next": "^13.0.5",
@@ -29,14 +31,14 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.1.1",
+    "@types/chart.js": "^2.9.37",
+    "@types/cheerio": "^0.22.31",
     "@types/node": "18.0.6",
     "@types/react": "18.0.15",
+    "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
-    "@types/chart.js": "^2.9.37",
-    "@types/cheerio": "^0.22.31",
-    "@types/react-chartjs-2": "^2.5.7",
     "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
