--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@emotion/react": "11.10.4",
     "@emotion/styled": "11.10.4",
     "@tanstack/react-query": "^4.18.0",
+    "@tanstack/react-query-devtools": "^4.18.0",
     "axios": "^1.2.0",
     "chart.js": "^4.0.1",
     "cheerio": "^1.0.0-rc.12",
